compiler/toc_analysis/src/const_eval/snapshots/toc_analysis__const_eval__test__error_div_by_zero-5.snap
---
source: compiler/toc_analysis/src/const_eval/test.rs
expression: 1 / 0

---
InnerCtx {
    eval_infos: [
        EvalInfo { unit_id: UnitId(0), span: Span { file: None, range: 11..16 }, state: Error(ConstError { kind: DivByZero, span: Span { file: None, range: 13..14 } }) },
    ],
    var_to_expr: {
        GlobalDefId(UnitId(0), DefId(0)): ConstExpr { id: 0 },
    },
}
ConstExpr { id: 0 } -> ConstError { kind: DivByZero, span: Span { file: None, range: 13..14 } }

error at 13..14: division by zero in compile-time expression

