compiler/toc_analysis/src/const_eval/snapshots/toc_analysis__const_eval__test__error_div_by_zero-7.snap
---
source: compiler/toc_analysis/src/const_eval/test.rs
expression: 1.0 / 0

---
ConstEvalCtx {
    inner: RwLock {
        data: InnerCtx {
            eval_infos: [
                EvalInfo { unit_id: UnitId(0), span: 11..18, state: Error(DivByZero) },
            ],
            var_to_expr: {
                GlobalDefId(UnitId(0), DefId(0)): ConstExpr { id: 0 },
            },
        },
    },
}
ConstExpr { id: 0 } -> Spanned(DivByZero, 15..16)

