compiler/toc_analysis/src/const_eval/snapshots/toc_analysis__const_eval__test__error_equality_wrong_types-12.snap
---
source: compiler/toc_analysis/src/const_eval/test.rs
expression: true = 1

---
"_"@(FileId(1), 6..7) -> ConstError { kind: WrongOperandType, span: (FileId(1), 16..17) }

error in file FileId(1) at 16..17: wrong type for compile-time expression

