compiler/toc_analysis/src/const_eval/snapshots/toc_analysis__const_eval__test__error_equality_wrong_types-13.snap
---
source: compiler/toc_analysis/src/const_eval/test.rs
expression: "'c' = 1.0"

---
"_"@(FileId(1), 6..7) -> ConstError { kind: WrongOperandType, span: (FileId(1), 15..16) }

error in file FileId(1) at 15..16: wrong type for compile-time expression

